Fix filter products by properties
